--- a/content/implementation/cpu_offloading.tex
+++ b/content/implementation/cpu_offloading.tex
@@ -1,11 +1,11 @@
 \subsection{Offloading Optimizations}
 \label{subsection:offloading}
 
-To further reduce GPU memory usage, Deepspeed contains optimizations to offload 
+To further reduce GPU memory usage, DeepSpeed contains optimizations to offload 
 data and compute from the GPU to CPU or even Non-Volatile Memory express (NVMe) 
 memory. 
 
-Offloading optimizations in Deepspeed were introduced in ZeRO-Offload 
+Offloading optimizations in DeepSpeed were introduced in ZeRO-Offload 
 \cite*{DBLP:journals/corr/abs-2101-06840}. ZeRO-Offload builds on top of 
 the ZeRO Stage 2 optimizer which partitions gradients and optimizer states. 
 With offloading enabled, each GPU offloads part of its partition to the CPU. 
@@ -17,8 +17,8 @@ To determine the offload strategy, the offload engine represents the model as
 data-flow graph with nodes are model states (parameters, gradients and 
 optimiter states) and edges are communication volume between that flows through 
 the model during training. ZeRO-Offload uses a two-way partitioning scheme to 
-split the graph into CPU and GPU partitionings while trying to optimize CPU 
-CPU computation overhead, communication overhead and memory savings. 
+split the graph into CPU and GPU partitionings while trying to optimize CPU-CPU 
+computation overhead, communication overhead and memory savings. 
 
 Generally speaking, offloading is a scale-up approach to utilize as much 
 resources on each machine as possible, including CPU cores and memory. 
@@ -57,7 +57,7 @@ long as enough CPU or NVMe is available.
 Similiar to ZeRO-Offload, after our integration of ZeRO-3 into the OCP 
 code base, infinity offloading worked out-of-the-box. ZeRO-Infinity's
 offload engine can be enabled in Stage 3 using the two ZeRO configurations 
-\textit{offload\_optimizer} and \textit{offload\_param} to offload 
+\texttt{offload\_optimizer} and \texttt{offload\_param} to offload 
 either optimizer states or entire parts of the model:
 
 \newpage
