References to ieee 754 & bfloat16

--- a/content/implementation/mixed_precision.tex
+++ b/content/implementation/mixed_precision.tex
@@ -12,8 +12,10 @@ into the OCP project.
 
 FP16 is a floating-point number format which uses 5 bits for the exponent, 10 bits for the fraction and 1 bit for the 
 sign. This halves the used memory compared to the default single-precision floating-point format which uses 8 bits 
-for the exponent and 24 bits for the fraction. However, FP16 lowers the precision and reduces the range of numbers 
-that can be represented, making calculations less accurate and increasing the risk of overflows/underflows.
+for the exponent and 24 bits for the fraction. The specification of FP16 can be found in the official IEEE 754-2008 
+standard\footnote{\url{https://standards.ieee.org/ieee/754/4211/}}.
+FP16 lowers the precision and reduces the range of numbers that can be represented, making calculations less 
+accurate and increasing the risk of overflows/underflows.
 
 PyTorch and DeepSpeed offer automatic mixed precision for gradients. Developers can define regions with context managers 
 to allow PyTorch to automatically choose the precision for GPU operations. Even though autocast worked for learnable
@@ -27,7 +29,8 @@ FP16 can be used by just setting the \texttt{fp16} flag in the DeepSpeed configu
 As mentioned before, the use of FP16 leads to a higher risk of overflows and underflows. We experienced many overflows 
 of gradients when using FP16 with DeepSpeed. To avoid overflows, DeepSpeed offers support for the Bfloat16 number 
 format which allocates more bits to the exponent to extend the range of representable numbers while lowering 
-precision.
+precision. The specification of the Bfloat16 number format can be found on the official Google documentation\footnote{\url{https://cloud.google.com/tpu/docs/bfloat16}}. 
+
 As with FP16, we had to include manual type casts in the OCP codebase to integrate Bfloat16 support. 
 Bfloat16 can also be enabled from the DeepSpeed configuration using the \texttt{bf16} flag.
 
